updated to latest rust & libraries

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,18 @@ authors = ["quote <quote@lv0.io>"]
 name = "triangleproject"
 path = "src/main.rs"
 
+[dependencies]
+rand = "0.1"
+clock_ticks = "*"
+
 [dependencies.gfx]
 git = "https://github.com/gfx-rs/gfx-rs"
 
 [dependencies.gfx_macros]
 git = "https://github.com/gfx-rs/gfx-rs"
+
+[dependencies.gfx_device_gl]
+git = "https://github.com/gfx-rs/gfx_device_gl"
 
 [dependencies.shader_version]
 git = "https://github.com/PistonDevelopers/shader_version"
@@ -31,5 +38,11 @@ git = "https://github.com/PistonDevelopers/event"
 [dependencies.vecmath]
 git = "https://github.com/PistonDevelopers/vecmath"
 
+[dependencies.pistoncore-window]
+git = "https://github.com/PistonDevelopers/window"
+
 [dependencies.piston3d-cam]
 git = "https://github.com/PistonDevelopers/cam"
+
+[dependencies.camera_controllers]
+git = "https://github.com/PistonDevelopers/camera_controllers"
